<resources>
    <string name="app_name">Yousef</string>
    <string name="app_namePersian">املاک یوسف</string>
    <string name="LogIn">ورود</string>
    <string name="Home">خانه</string>
    <string name="NewSearch">جستجوی جدید</string>
    <string name="LastSearch">آخرین جستجو</string>
    <string name="SearchSaved">جستجوی ذخیره شده</string>
    <string name="Like">لیست علاقه مندی املاک</string>
    <string name="CarTitleNav">خودرو</string>
    <string name="b_info_title">بانک اطلاعاتی</string>
    <string name="CarFavorite">لیست علاقه مندی ماشین</string>
    <string name="myCar">ماشین های من</string>
    <string name="bankFav">لیست علاقه مندی بانک اطلاعاتی</string>
    <string name="userItemBank">بانک اطلاعاتی کاربر</string>
    <string name="AdManagement">املاک</string>
    <string name="AddHome">افزودن ملک</string>
    <string name="AddHome2">املاک</string>
    <string name="Add_Property">ملک اضافه کنید</string>
    <string name="MyHome">املاک من</string>
    <string name="Telephone">تماس با ما</string>
    <string name="Setting">تنظیمات</string>
    <string name="AboutMe">درباره ما</string>
    <string name="OpenNavigation">بازشدن منو</string>
    <string name="CloseNavigation">بسته شدن منو</string>
    <string name="SamaneShaar">جامع‌ترین سامانه آگهی سنندج</string>
    <string name="SearchHome">جستجوی ملک</string>
    <string name="cartitle">خودرو</string>
    <string name="NewsHome">جدید‌ترین املاک</string>
    <string name="Help">راهنما</string>
    <string name="Next">بعدی</string>
    <string name="NotAccount_AddAccount">حساب کاربری نداری؟ همین حالا ثبت‌نام کن</string>
    <string name="AddAccount">حساب کاربری جدید ایجاد کن</string>
    <string name="LogInWithEmail">ورود با ایمیل</string>
    <string name="LogInMoshaverin">ورود مشاورین</string>
    <string name="Email">ایمیل(اختیاری)</string>
    <string name="Password">رمز عبور</string>
    <string name="Forget">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="Name_Family">نام و نام خانوادگی</string>
    <string name="ComparePassword">تکرار رمز عبور</string>
    <string name="Register">ثبت نام</string>
    <string name="NewAccount">حساب کاربری جدید</string>
    <string name="Target">هدف</string>
    <string name="Sell">فروش</string>
    <string name="Rent">اجاره</string>
    <string name="KindOfHome">نوع ملک*</string>
    <string name="Residential">مسکونی</string>
    <string name="Commercial">تجاری</string>
    <string name="Industrial">صنعتی</string>
    <string name="Location">موقعیت*</string>
    <string name="Area">منطقه خود را وارد نمایید</string>
    <string name="Property_details">جزییات ملک</string>
    <string name="AdTitle">عنوان آگهی*</string>
    <string name="DiscriptionHome">توضیحات ملک*</string>
    <string name="Price">قیمت* (تومان)</string>
    <string name="Price2">قیمت</string>
    <string name="TheArea">متراژ*</string>
    <string name="TheArea2">متراژ</string>
    <string name="DiscriptionCall">جزییات تماس</string>
    <string name="Mobile">موبایل</string>
    <string name="Phone">تلفن</string>
    <string name="AddVideo">اضافه کردن ویدیو</string>
    <string name="VideoLink">لینک ویدیو</string>
    <string name="HaveImage">دارای عکس</string>
    <string name="AfterToSave">بعدا ثبت کنید</string>
    <string name="Save">ثبت</string>
    <string name="AddHouse">ملک اضافه کنید</string>
    <string name="SellAndBuy">خرید و فروش</string>
    <string name="TypeHome">نوع ملک</string>
    <string name="LowestPrice">پایین ترین قیمت</string>
    <string name="MaximumPrice">بالاترین قیمت</string>
    <string name="TheArea_SquareMeters">متراژ (متر مربع)</string>
    <string name="LowestArea">پایین ترین متراژ</string>
    <string name="MaximumArea">بالاترین متراژ</string>
    <string name="CountRoom">تعداد اتاق</string>
    <string name="Edit">ویرایش</string>
    <string name="ClearItem">پاک کردن گزینه ها</string>
    <string name="MoreFilter">فیلترهای بیشتر</string>
    <string name="ResaultSearch">نتایج جستجو</string>
    <string name="Share">اشتراک</string>
    <string name="LikeHome">پسندیدن</string>
    <string name="Map">نقشه</string>
    <string name="More_Information">اطلاعات بیشتر</string>
    <string name="B_information">بانک اطلاعاتی</string>
    <string name="Property">ویژگی ها</string>
    <string name="WritingBy">درج شده توسط</string>
    <string name="Call">تماس</string>
    <string name="SMS">پیامک</string>
    <string name="EditMoshaverin">تنظیمات مشاورین</string>
    <string name="Clear">پاک کن</string>
    <string name="AddProperty">ویژگی ها را اضافه کنید</string>
    <string name="Done">انجام شد</string>
    <string name="Possibilities">امکانات</string>
    <string name="View">منظره</string>
    <string name="Balcony">بالکن</string>
    <string name="lobby">لابی</string>
    <string name="Double_glazed_window">پنجره دو جداره</string>
    <string name="Central_air_conditioning_system">سیستم تهویه هوای مرکزی</string>
    <string name="Central_Motor_Home">موتور خانه مرکزی</string>
    <string name="Electricity">حیاط</string>
    <string name="Shooting">شوتینگ</string>
    <string name="Floor">طبقه</string>
    <string name="Number_of_building_floors">تعداد طبقات ساختمان</string>
    <string name="Floor_of_the_floor">جنس کف</string>
    <string name="Elevator">آسانسور</string>
    <string name="Other_key_features">دیگر ویژگی های کلیدی</string>
    <string name="Document_and_ownership">سند و مالکیت</string>
    <string name="Commercial_Appliances">لوازم تجاری</string>
    <string name="Toilet_number">تعداد پارکینگ</string>
    <string name="Parking">پارکینگ</string>
    <string name="Total_number_of_classes">تعداد کل طبقات</string>
    <string name="Wall_of_the_wall">جنس دیوار</string>
    <string name="heating_system">سیستم گرمایشی</string>
    <string name="kitchen">آشپزخانه</string>
    <string name="Facade">نما</string>
    <string name="Cabinets">کابینت</string>
    <string name="Height">ارتفاع</string>
    <string name="Property_location">موقعیت ملک</string>
    <string name="Service">سرویس</string>
    <string name="Gas">گاز</string>
    <string name="Water">آب</string>
    <string name="Remote_door">درب ریموت</string>
    <string name="IPhone_video">آیفون تصویری</string>
    <string name="sauna">سونا</string>
    <string name="Rebuilding">بازسازی</string>
    <string name="busy">پرتردد</string>
    <string name="Endowments">اوقافی</string>
    <string name="Nice_board">تابلو خور خوب</string>
    <string name="On">بر</string>
    <string name="Pass">گذر</string>
    <string name="Flood">قواره</string>
    <string name="Alleyway">گذر کوچه</string>
    <string name="Your_daddy">دونبش</string>
    <string name="Have_a_license_to_build">دارای جواز ساخت</string>
    <string name="Has_a_map_command">دارای دستور نقشه</string>
    <string name="Number_of_units">تعداد واحد</string>
    <string name="Size_of_land">متراژ زمین</string>
    <string name="Subscriber_Number">تعداد واحد زیرتجاری</string>
    <string name="Rooms">اتاق ها</string>
    <string name="Prayer_room">نماز خانه</string>
    <string name="Laundry">خشکشویی</string>
    <string name="Guard">نگهبان</string>
    <string name="Warehouse">انباری</string>
    <string name="Reading_room">سالن مطالعه</string>
    <string name="Commerce_and_communications">تجارت و ارتباطات</string>
    <string name="high_speed_Internet">اینترنت پر سرعت</string>
    <string name="Conference_room">اتاق کنفرانس</string>
    <string name="ATM">دستگاه خودپرداز در ساختمان</string>
    <string name="Health_centers">مراکز درمانی و بهداشتی</string>
    <string name="Barbecue">باربیکیو</string>
    <string name="Healthcare_center">مرکز ارایه خدمات درمانی</string>
    <string name="sport_Club">باشگاه ورزشی</string>
    <string name="Swimming_pool">استخر</string>
    <string name="Nearby_Neighborhoods">محله های نزدیک</string>
    <string name="Schools_close_to_the_place">مدارس نزدیک به ملک</string>
    <string name="Hospitals_close_to_the_property">بیمارستان های نزدیک به ملک</string>
    <string name="Shopping_centers_close_to_the_property">مراکز خرید نزدیک به ملک</string>
    <string name="Distance_from_airport">فاصله از فرودگاه</string>
    <string name="Public_transportation_close_to_the_property">وسایل حمل و نقل عمومی نزدیک به ملک</string>
    <string name="Other_important_centers_near_the_property">مراکز مهم دیگر در نزدیکی ملک</string>
    <string name="Other_features">دیگر امکانات</string>
    <string name="janitor">نظافت چی</string>
    <string name="Coffee_Shop">کافی شاپ</string>
    <string name="Designed_to_fit_low_income_people">طراحی متناسب با افراد کم توان</string>
    <string name="Electricity_and_emergency_water">برق و اب اضطراری</string>
    <string name="Sleep_master">خواب مستر</string>
    <string name="Massage_salon">سالن ماساژ</string>
    <string name="Turkish_bath">حمام ترکی</string>
    <string name="Roof_garden">روف گاردن</string>
    <string name="Altar">آلاچیق</string>
    <string name="Fountain">آب نما</string>
    <string name="Fireplace">آتشکده</string>
    <string name="Internal_Communication">ارتباط داخلی</string>
    <string name="chiller">چیلر</string>
    <string name="Fruit_garden">باغ میوه</string>
    <string name="Catering">کیترینگ</string>
    <string name="Parking_Distance">ریموت پارکینگ</string>
    <string name="Yard">حیاط</string>
    <string name="Conference_Hall">سالن اجتماعات</string>
    <string name="Security_System">سیستم امنیتی</string>
    <string name="Emergency_Exit">خروجی اضطراری</string>
    <string name="Automatic_Fire_Extinguishing_System">سیستم اطفا حریق خودکار</string>
    <string name="Fire_Hose">شیلنگ آتش نشانی</string>
    <string name="Fire_Extinguishing">اطفاء حریق</string>
    <string name="Internal_Security_System">سیتم امنیتی داخلی</string>
    <string name="TwentyFour_hour_Security">سیتم امنیتی داخلی</string>
    <string name="CCTV">دوربین مداربسته</string>
    <string name="Amazing">فوق العاده</string>
    <string name="Wiring_UPS">سیم کشی ups</string>
    <string name="ForLater">برای بعد</string>
    <string name="Confirmation">تایید</string>
    <string name="Search">جستجو</string>
    <string name="SearchById">جستجو براساس کدآگهی</string>
    <string name="Added_Property">ویژگی ها را اضافه کنید</string>
    <string name="Rent_Price">اجاره* (تومان)</string>
    <string name="Mortgage">رهن* (تومان)</string>
    <string name="security_24_hour">نگهبانی 24 ساعته</string>
    <string name="Disregard">صرف نظر</string>
    <string name="Verification_Code">کد تایید</string>
    <string name="Resend">ارسال مجدد</string>
    <string name="Year_of_construction">سال ساخت</string>
    <string name="Address">آدرس</string>
    <string name="CodePosty">کدپستی</string>
    <string name="MyHomes">املاک من</string>
    <string name="Draft">پیش نویس</string>
    <string name="Published">منتشر شده</string>
    <string name="Minimum_Mortgage">پایین ترین رهن</string>
    <string name="Maximum_Mortgage">بالاترین رهن</string>
    <string name="Maximum_Rent">بالاترین اجاره</string>
    <string name="Minimum_Rent">پایین ترین اجاره</string>
    <string name="FullRent">اجاره کامل</string>
    <string name="FullMortgage">رهن کامل</string>
    <string name="Special">جیاواز</string>
    <string name="SMSMessage">باسلام در خصوص آگهی </string>
    <string name="ShareHome1">آگهی شماره</string>
    <string name="ShareHome2">در اپلیکیشن املاک یوسف</string>
    <string name="PhoneYourUserPro">شماره تماس مشاور شما</string>
    <string name="Sort">مرتب سازی</string>
    <string name="New_old">تاریخ (جدید به قدیم)</string>
    <string name="Old_New">تاریخ (قدیم به جدید)</string>
    <string name="Expensiv_Cheap">قیمت (زیاد به کم)</string>
    <string name="Cheap_Expensiv">قیمت (کم به زیاد)</string>
    <string name="Room_l_h">اتاق (کم به زیاد)</string>
    <string name="Room_h_l">اتاق (زیاد به کم)</string>
    <string name="YourUserPro">کارشناس شما</string>
    <string name="city_in_your_hand">شهر در دستان توست</string>
    <string name="Exit">خروج از برنامه</string>
</resources>