<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_Exit"
            android:icon="@drawable/exit"
            android:title="@string/Exit" />

        <item
            android:id="@+id/navigation_LogIn"
            android:icon="@drawable/ic_login"
            android:title="@string/LogIn" />

        <item
            android:id="@+id/navigation_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home"/>

        <item
            android:id="@+id/navigation_NewSearch"
            android:icon="@drawable/ic_search"
            android:title="@string/NewSearch"/>

        <item
            android:id="@+id/navigation_LastSearch"
            android:icon="@drawable/ic_last_search"
            android:title="@string/LastSearch"/>

        <item
            android:id="@+id/navigation_SearchSaved"
            android:icon="@drawable/ic_download"
            android:title="@string/SearchSaved"/>


        <item
            android:id="@+id/navigation_Like"
            android:icon="@drawable/ic_like"
            android:title="@string/Like"/>

        <item
            android:id="@+id/navigation_GetById"
            android:icon="@drawable/search"
            android:title="@string/SearchById"/>


    </group>

    <item android:title="@string/AdManagement">

        <menu>

            <item
                android:id="@+id/navigation_AddHome"
                android:icon="@drawable/ic_add_house"
                android:title="@string/AddHome" />

            <item
                android:id="@+id/navigation_MyHome"
                android:icon="@drawable/ic_my_house"
                android:title="@string/MyHome" />

            <item
                android:id="@+id/navigation_CallMe"
                android:icon="@drawable/ic_call_me"
                android:title="@string/Telephone" />

            <!--<item-->
                <!--android:id="@+id/navigation_Setting"-->
                <!--android:icon="@drawable/ic_setting"-->
                <!--android:title="@string/Setting" />-->

            <item
                android:id="@+id/navigation_AboutMe"
                android:layout_width="wrap_content"
                android:icon="@drawable/ic_about"
                android:title="@string/AboutMe" />

        </menu>

    </item>

</menu>