<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorCenteral">

            <ImageView
                android:id="@+id/BackIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/Back_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/BackIcon"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:text="@string/Edit"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_Target"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Target"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/Fragment_Edit_Home_RadioGroup_Target"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/Fragment_Edit_Home_RadioButton_Sell"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:buttonTint="@color/colorBlue"
                            android:text="@string/Sell"
                            android:textSize="15sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorBlue"
                            android:text="@string/Rent"
                            android:textSize="15sp" />

                    </RadioGroup>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginTop="20dp"
                        android:alpha="0.1"
                        android:background="@color/colorBlack" />

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_KindOfHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/KindOfHome"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/Fragment_Edit_Home_RadioGroup_KindOfHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:buttonTint="@color/colorBlue"
                            android:text="@string/Residential"
                            android:textSize="12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:buttonTint="@color/colorBlue"
                            android:text="@string/Commercial"
                            android:textSize="12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorBlue"
                            android:text="@string/Industrial"
                            android:textSize="12sp" />

                    </RadioGroup>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/Fragment_Edit_Home_Recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp" />

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_Location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/Location"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Fragment_Edit_Home_txt_Area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/colorPaleBlack"
                        android:hint="@string/Area"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_Property_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/Property_details"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Fragment_Edit_Home_txt_AdTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/colorPaleBlack"
                        android:hint="@string/AdTitle"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/Fragment_Edit_Home_txt_DiscriptionHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/colorPaleBlack"
                        android:hint="@string/DiscriptionHome"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_Price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/Price"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Fragment_Edit_Home_txt_Price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/colorPaleBlack"
                        android:hint="@string/Price2"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_TheArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/TheArea"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Fragment_Edit_Home_txt_TheArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/colorPaleBlack"
                        android:hint="@string/TheArea2"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_DiscriptionCall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/DiscriptionCall"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:id="@+id/Fragment_Edit_Home_txt_Mob"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="8"
                            android:backgroundTint="@color/colorPaleBlack"
                            android:hint="@string/Mobile"
                            android:inputType="number"
                            android:layoutDirection="ltr"
                            android:textSize="14sp" />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:backgroundTint="@color/colorWhite"
                            android:enabled="false"
                            android:layoutDirection="ltr"
                            android:text="+۹۸"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:id="@+id/Fragment_Edit_Home_txt_Phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="8"
                            android:backgroundTint="@color/colorPaleBlack"
                            android:hint="@string/Phone"
                            android:inputType="number"
                            android:layoutDirection="ltr"
                            android:textSize="14sp" />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:backgroundTint="@color/colorWhite"
                            android:enabled="false"
                            android:layoutDirection="ltr"
                            android:text="+۹۸ ۷۸"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_AddVideo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/AddVideo"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:id="@+id/Fragment_Edit_Home_txt_VideoLink"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_weight="6"
                            android:backgroundTint="@color/colorPaleBlack"
                            android:hint="@string/VideoLink"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:singleLine="true"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/Fragment_Edit_Home_Spinner_VideoLink"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/Fragment_Edit_Home_lbl_HaveImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/HaveImage"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/addimage" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <Button
                        android:id="@+id/AfterToSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:text="@string/ForLater"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorBlue"
                        android:text="@string/Confirmation"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:text="@string/Edit"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</RelativeLayout>